# sli3

./: .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  ChangeLog.md  Makefile  README.md  base.mk  code-review.md  config.h.in  fix-plan.md  implementation_spec.md  makefile  sli  sli_aggregatetoken.h  sli_allocator.cpp  sli_allocator.h  sli_array.cpp  sli_array.h  sli_array_functions.h  sli_array_module.cpp  sli_array_module.h  sli_arraytype.cpp  sli_arraytype.h  sli_builtins.cpp  sli_builtins.h  sli_charcode.cpp  sli_charcode.h  sli_container_ops.cpp  sli_control.cpp  sli_control.h  sli_dictionary.cpp  sli_dictionary.h  sli_dictstack.cpp  sli_dictstack.h  sli_dicttype.cpp  sli_dicttype.h  sli_exceptions.cpp  sli_exceptions.h  sli_fdstream.cpp  (+55 more)
bench/: README.md  _bisect.sh  b2b_only.sh  history.sh  init_db.sh  run.sh  summary.sh
bench/ps/: B10_matmul.ps  B1_pop.ps  B2_add_pop.ps  B2b_add_pop_bound.ps  B3_for_loop.ps  B5_dict_begin_end.ps  B7_bubble_sort.ps  B8_insertion_sort.ps  B9_fibonacci.ps
bench/sli/: B2_add_pop.sli  B3_for_loop.sli  B5_dict_begin_end.sli  B6_stopped.sli  B6b_stopped_deep.sli  B6b_stopped_deep_norec.sli  B8_insertion_sort.sli  B9_fibonacci.sli
doc/: adding_operators.md  axis1_bundle_step3_plan.md  axis1_slice2_audit.md  axis1_slice8_plan.md  compact_procedure_spec.md  control_flow_spec.md  dispatch_restructure_plan.md  gs_reference.md  hot_ops.md  next_steps.md  tail_recursion.md
doc/tutorial/: 00_intro.md  01_stack.md  02_arithmetic.md  03_names.md  04_conditionals.md  05_loops.md  06_arrays.md  07_dicts.md  08_types.md  09_printing.md  10_examples.md  11_graphics.md  README.md  core_commands.md  outline.md
doc/tutorial/examples/ch01_stack/: count_clear.sli  dup.sli  exch_over.sli  index_roll.sli
doc/tutorial/examples/ch02_arithmetic/: basic.sli  order.sli  pythagoras.sli
doc/tutorial/examples/ch03_names/: def.sli  hypot.sli  lookup.sli
doc/tutorial/examples/ch04_conditionals/: compare.sli  if_ifelse.sli  myabs.sli
doc/tutorial/examples/ch05_loops/: fib_return.sli  for.sli  forall.sli  loop_exit.sli  repeat.sli
doc/tutorial/examples/ch06_arrays/: append_join.sli  length_get.sli  literal.sli  map_mapthread.sli  range_map.sli
doc/tutorial/examples/ch07_dicts/: greet.sli  known_keys.sli  literal.sli
doc/tutorial/examples/ch08_types/: conversions.sli  type.sli
doc/tutorial/examples/ch09_printing/: eq_vs_eqeq.sli  eqonly_line.sli  stack_pstack.sli  streams.sli
doc/tutorial/examples/ch10_full/: dispatch.sli  factorial.sli  sum_product.sli
doc/tutorial/examples/ch11_graphics/: 01_rect.sli  02_triangle.sli  03_shapes.sli  04_alpha.sli  05_dashed.sli  06_text.sli  07_stars.sli  08_pdf.sli  09_composite.sli  10_barchart.sli  11_gradient.sli  12_composit.sli  13_viewpng.sli  14_rotated_squares.sli
doc/tutorial/examples_raw/: _index.md  _status.tsv
doc/tutorial/examples_raw/arrays/: arraylib__IndexWrap.sli  arraylib__Mean.sli  arraylib__Product.sli  arraylib__SDev.sli  arraylib__Sum.sli  arraylib__Var.sli  arraylib__getdeep.sli
doc/tutorial/examples_raw/bench/: B10_matmul.sli  B1_pop.sli  B2b_add_pop_bound.sli  B4_add_ii.sli  B6_stopped_norec.sli  B6c_stopped_ostack.sli  B6c_stopped_ostack_norec.sli  B7_bubble_sort.sli
doc/tutorial/examples_raw/control/: Set.sli  bind.sli  debug.sli  exec.sli  for.sli  if.sli  ifelse.sli  mark.sli  print_error.sli  quit.sli  raiseerror.sli  repeat.sli
doc/tutorial/examples_raw/core/: First.sli  Last.sli  LocateFileNames.sli  Rest.sli  _x3d_x3donly.sli  _x3donly.sli  addpath.sli  array.sli  bind.sli  callback.sli  (+20 more)
doc/tutorial/tools/: check_examples.py  harvest.py  verify.py
lib/sli/: debug.sli  graphicslib.sli  library.sli  mathematica.sli  ps-lib.sli  regexp.sli  sli-init.sli  typeinit.sli
src/builtins/: sli_access_check.h  sli_access_ops.cpp  sli_access_ops.h  sli_array_module.cpp  sli_builtins.cpp  sli_builtins.h  sli_container_ops.cpp  sli_container_ops.h  sli_control.cpp  sli_control.h  sli_cow.h  sli_graphics_module.cpp  sli_graphics_module.h  sli_io_ops.cpp  sli_math.cpp  sli_math.h  sli_op_bodies.h  sli_readline.cpp  sli_readline.h  sli_regex_module.cpp  sli_regex_module.h  sli_stack.cpp  sli_startup.cpp  sli_state_ops.cpp  sli_state_ops.h  sli_trace.cpp  sli_trace.h  sli_typecheck.cpp  sli_typecheck.h
src/containers/: sli_array.cpp  sli_array.h  sli_dictionary.cpp  sli_dictionary.h  sli_dictstack.cpp  sli_dictstack.h  sli_graphics.cpp  sli_graphics.h  sli_name.cpp  sli_name.h  sli_string.h  sli_tokenstack.cpp  sli_tokenstack.h
src/interpreter/: sli_function.h  sli_interpreter.cpp  sli_interpreter.h  sli_main.cpp  sli_module.h  sli_numerics.cpp  sli_numerics.h  sli_signal.cpp  sli_signal.h
src/parser/: sli_parser.cpp  sli_parser.h  sli_scanner.cpp  sli_scanner.h
src/serialize/: sli_serialize.cpp  sli_serialize.h
src/trie/: sli_trie.h  sli_trietype.h  sli_type_trie.cpp  sli_type_trie.h
src/types/: sli_access.h  sli_arraytype.cpp  sli_arraytype.h  sli_dicttype.cpp  sli_dicttype.h  sli_functiontype.cpp  sli_functiontype.h  sli_graphicscontexttype.cpp  sli_graphicscontexttype.h  sli_integertype.cpp  sli_integertype.h  sli_iostreamtype.cpp  sli_iostreamtype.h  sli_nametype.cpp  sli_nametype.h  sli_patterntype.cpp  sli_patterntype.h  sli_regextype.cpp  sli_regextype.h  sli_stringtype.cpp  sli_stringtype.h  sli_token.cpp  sli_token.h  sli_type.cpp  sli_type.h
src/util/: sli_allocator.h  sli_exceptions.cpp  sli_exceptions.h
tests/: test_access.cpp  test_array.cpp  test_array_module.cpp  test_bind.cpp  test_dictionary.cpp  test_dictstack.cpp  test_dispatch_abi.cpp  test_dispatch_parity.cpp  test_errors.cpp  test_errors_dispatch.cpp  test_features.cpp  test_graphics_module.cpp  test_harness.h  test_math_overflow.cpp  test_name.cpp  test_regex_module.cpp  test_round_trip.cpp  test_scanner_edge_cases.cpp  test_serialize.cpp  test_signal_trap.cpp  test_sli_eval.cpp  test_stack_ops_negatives.cpp  test_state_ops.cpp  test_token.cpp  test_tokenstack.cpp  test_two_interpreters.cpp
unported/: README.md  sli_aggregatetoken.h  sli_config.h  sli_io.h  sli_tokenutils.cpp  test_token.cpp
(+139 files in other folders)
